--- a/Slideshow-v1/package.json
+++ b/Slideshow-v1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netflix-slideshow-v1",
+  "name": "khcinemaa-slideshow-pro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
